#62: Get rest package clean, not a Jigsaw module
Not a Jigsaw module because the cooperation with spring is difficult and
the advantage is minimal for the end application.