@@ -54,6 +54,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+      		<groupId>com.fasterxml.jackson.core</groupId>
+      		<artifactId>jackson-annotations</artifactId>
+      		<version>2.9.6</version><!--$NO-MVN-MAN-VER$-->
+		</dependency>
+		<dependency>
 			<groupId>de.lgblaumeiser</groupId>
 			<artifactId>datamanager</artifactId>
 			<version>1.3-SNAPSHOT</version>
@@ -65,8 +70,43 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			    <configuration>
+    	    		<jvmArguments>--add-modules java.xml.bind</jvmArguments>
+        			<mainClass>org.springframework.samples.petclinic.PetClinicApplication</mainClass>
+    			</configuration>
 			</plugin>
-			<plugin>
+      		<plugin>
+        		<groupId>org.apache.maven.plugins</groupId>
+        		<artifactId>maven-surefire-plugin</artifactId>
+        		<configuration>
+          			<redirectTestOutputToFile>true</redirectTestOutputToFile>
+          			<reportsDirectory>../../shippable/testresults</reportsDirectory>
+          			<argLine>-Xmx1024m</argLine>
+        		</configuration>
+        		<dependencies>
+          			<dependency>
+            			<groupId>org.ow2.asm</groupId>
+            			<artifactId>asm</artifactId>
+            			<version>6.1.1</version>
+          			</dependency>
+        		</dependencies>
+      		</plugin>
+      		<plugin>
+      			<groupId>org.apache.maven.plugins</groupId>
+        		<artifactId>maven-compiler-plugin</artifactId>
+        		<configuration>
+          			<source>10</source>
+          			<target>10</target>
+        		</configuration>
+				<dependencies>
+        			<dependency>
+            			<groupId>org.ow2.asm</groupId>
+            			<artifactId>asm</artifactId>
+            			<version>6.1.1</version>
+        			</dependency>
+				</dependencies>
+      		</plugin>
+	  		<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.1</version>
@@ -84,7 +124,7 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
+	  		</plugin>
 		</plugins>
 	</build>
 </project>
